Fixed alignment of logo in main navigation

--- a/resources/assets/sass/_theme.scss
+++ b/resources/assets/sass/_theme.scss
@@ -111,7 +111,6 @@ img {
     background: 0 0;
     border-bottom: 1px solid transparent;
     .navbar-brand {
-      padding: 20px;
       &:focus, &:hover {
         color: rgba(255, 255, 255, 0.8);
       }
